[package]
name = "geospatial-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
postgis = "0.9"
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_7", "with-uuid-1", "with-serde_json-1", "with-uuid-0_8", "with-serde_json-1"] }
deadpool-postgres = "0.10"
redis = { version = "0.23", features = ["tokio-comp"] }
geo-types = "0.7"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0.50"
async-trait = "0.1"
futures = "0.3"
postgres-types = { version = "0.2", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"
utoipa = { version = "4.2", features = ["actix_extras", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
indexmap = "2.1" 